feat(projects): mention iOS and Android in daily-talk-topics description

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -150,7 +150,7 @@ projects.medit.description=Worked on MediCheck \u2014 a web and mobile applicati
 
 # Personal projects
 projects.dailytalktopics.title=Daily Talk Topics
-projects.dailytalktopics.description=A mobile app that delivers fresh conversation starters every day. Pick a category, get topics as flip cards, and spark real conversations.
+projects.dailytalktopics.description=A mobile app for iOS and Android that delivers fresh conversation starters every day. Pick a category, get topics as flip cards, and spark real conversations.
 projects.portfolio.title=Portfolio Website
 projects.portfolio.description=This website \u2014 a self-hosted Spring Boot application with Thymeleaf, Alpine.js and Tailwind CSS.
 projects.aoc.title=Advent of Code
