--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -148,7 +148,7 @@ projects.medit.title=MedIT Solutions
 projects.medit.description=Gewerkt aan MediCheck \u2014 een web- en mobiele applicatie voor verpleeghuizen om medicijnen toe te dienen aan pati\u00ebnten, feedback vast te leggen en samen te werken binnen zorgteams.
 # Persoonlijke projecten
 projects.dailytalktopics.title=Daily Talk Topics
-projects.dailytalktopics.description=Een mobiele app die dagelijks verse gespreksonderwerpen levert. Kies een categorie, ontvang onderwerpen als flipkaarten en start echte gesprekken.
+projects.dailytalktopics.description=Een mobiele app voor iOS en Android die dagelijks verse gespreksonderwerpen levert. Kies een categorie, ontvang onderwerpen als flipkaarten en start echte gesprekken.
 projects.portfolio.title=Portfolio Website
 projects.portfolio.description=Deze website \u2014 een zelfgehoste Spring Boot-applicatie met Thymeleaf, Alpine.js en Tailwind CSS.
 projects.aoc.title=Advent of Code
