--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -136,6 +136,8 @@ projects.personal=Personal
 projects.view.timeline=View in timeline
 projects.view.project=View project
 projects.private=Private
+projects.in.progress=In Progress
+
 # Professional projects
 projects.ahold.title=Ahold Delhaize
 projects.ahold.description=Worked in Gambit, Ahold Delhaize's ad-tech division, building and maintaining microservices that facilitate the creation and billing of media campaigns.
@@ -145,7 +147,10 @@ projects.qualogy.title=Qualogy
 projects.qualogy.description=Contributed to in-house projects such as the KNSB back-end, led candidate selection through interviews and programming assignments, and organized knowledge sessions and company events.
 projects.medit.title=MedIT Solutions
 projects.medit.description=Worked on MediCheck \u2014 a web and mobile application used in nursing homes to administer medicine to patients, record feedback, and collaborate across care teams.
+
 # Personal projects
+projects.dailytalktopics.title=Daily Talk Topics
+projects.dailytalktopics.description=A mobile app for iOS and Android that delivers fresh conversation starters every day. Pick a category, get topics as flip cards, and spark real conversations.
 projects.portfolio.title=Portfolio Website
 projects.portfolio.description=This website \u2014 a self-hosted Spring Boot application with Thymeleaf, Alpine.js and Tailwind CSS.
 projects.aoc.title=Advent of Code
