fix: changes project section header

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -157,7 +157,7 @@ projects.aoc.title=Advent of Code
 projects.aoc.description=My solutions to the annual Advent of Code programming challenges, written in Java and Kotlin.
 projects.hvc.title=HVC Notifier
 projects.hvc.description=A Java Spring Boot service that monitors trash collection schedules via the HVC API and sends daily email reminders.
-projects.kutns.title=kut-ns
+projects.kutns.title=kutns.nl
 projects.kutns.description=A satirical website (kutns.nl) where frustrated Dutch commuters click a big red button to vent about NS, featuring a live heatmap of clicks across the Netherlands.
 
 # Footer
