--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -155,7 +155,7 @@ projects.aoc.title=Advent of Code
 projects.aoc.description=Mijn oplossingen voor de jaarlijkse Advent of Code-programmeeruitdagingen, geschreven in Java en Kotlin.
 projects.hvc.title=HVC Notifier
 projects.hvc.description=Een Java Spring Boot-service die afvalinzamelroosters monitort via de HVC API en dagelijkse e-mailherinneringen verstuurt.
-projects.kutns.title=kut-ns
+projects.kutns.title=kutns.nl
 projects.kutns.description=Een satirische website (kutns.nl) waar gefrustreerde Nederlandse forenzen op een grote rode knop klikken om te klagen over NS, met een live heatmap van klikken door heel Nederland.
 
 # Footer
