updates skills description

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -65,7 +65,7 @@ experience.read.more=Read more
 # Skills
 skills.badge=What I Work With
 skills.title=Technical Skills
-skills.description=Years of hands-on experience building scalable backend systems, coaching teams, and shipping production-grade software.
+skills.description=Years of hands-on experience building scalable backend systems, coaching juniors, and shipping production-grade software.
 skills.expertise.backend=Backend Development
 skills.expertise.backend.desc=Java, Kotlin, Spring Boot, Microservices
 skills.expertise.cloud=Cloud & DevOps
