--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -65,7 +65,7 @@ experience.read.more=Lees meer
 # Skills
 skills.badge=Waar ik mee werk
 skills.title=Technische vaardigheden
-skills.description=Jarenlange hands-on ervaring met het bouwen van schaalbare backend-systemen, het coachen van teams en het opleveren van productiewaardige software.
+skills.description=Jarenlange hands-on ervaring met het bouwen van schaalbare backend-systemen, juniors coachen en het opleveren van productiewaardige software.
 skills.expertise.backend=Backend Development
 skills.expertise.backend.desc=Java, Kotlin, Spring Boot, Microservices
 skills.expertise.cloud=Cloud & DevOps
