feat(chess): add animated Smith-Morra Gambit chessboard behind recommendations section
Decorative chessboard animates 15 half-moves of the Sicilian Defence
Smith-Morra Gambit using pure CSS keyframes. Toggle button lets users
fade recommendations to view the game. Includes i18n (EN/NL), light/dark
theme support, reduced-motion, and amber-styled toggle with knight icons.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -197,3 +197,10 @@ contact.validation.email.size=Email must be less than 254 characters
 contact.validation.message.required=Message is required
 contact.validation.message.size=Message must be between 10 and 2000 characters
 contact.validation.failed=Validation failed
+
+# Chessboard
+chess.title=Sicilian Defence: Smith-Morra Gambit Accepted
+chess.flavor=I'm a Gambit player. I love playing the Smith-Morra Gambit positions as both colours!
+chess.meta=Animated with CSS
+chess.btn.show=View chess game
+chess.btn.hide=Hide chess game
