--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -195,3 +195,10 @@ contact.validation.email.size=E-mailadres moet minder dan 254 tekens zijn
 contact.validation.message.required=Bericht is verplicht
 contact.validation.message.size=Bericht moet tussen 10 en 2000 tekens zijn
 contact.validation.failed=Validatie mislukt
+
+# Chessboard
+chess.title=Siciliaanse Verdediging: Smith-Morra Gambiet Geaccepteerd
+chess.flavor=Ik ben een gambietspeler. Ik speel graag de Smith-Morra Gambiet posities met beide kleuren!
+chess.meta=Geanimeerd met CSS
+chess.btn.show=Bekijk schaakspel
+chess.btn.hide=Verberg schaakspel
